[package]
name = "async-backing-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
subxt-signer = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }
