[package]
name = "async-backing-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
subxt-signer = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
subxt-rpcs = { git = "https://github.com/paritytech/subxt.git", branch = "master" }

clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }
hex = { version = "0.4", features = ["serde"] }
codec = { package = "parity-scale-codec", version = "3.7.5" }
chrono = "0.4"
